added and styled add book button

--- a/root/index.html
+++ b/root/index.html
@@ -4,14 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="icon" type="image" href="../assets/images/favicon.ico.png">
     <link rel="stylesheet" href="../assets/styles/style.css">
-    <title>Document</title>
+    <title>Personal Library</title>
 </head>
+<header class="header">
+    <h1 class="welcome_txt">Welcome to Personal Library!</h1>
+</header>
 <body>
     
+    <div class="book_btn_box"></div>
+    <button class="book_btn" id="book_btn">Add a book</button>
+    </div>
+
     <footer class="footer">
-        &copy; 2022: Created by Michael Tackett.
+        &copy; 2022: Handcrafted by <a href=https://www.github.com/t-michael>t-michael</a> &#128125
     </footer>
     <script src="../assets/js/index.js"></script>
 </body>
