began adding add book button functionality

--- a/root/index.html
+++ b/root/index.html
@@ -16,7 +16,7 @@
 </header>
 <body>
     <main class="book_btn_box">
-    <button onclick="addBookBtn()" class="book_btn" id="book_btn">Add a book</button>
+    <button onclick="addNewBook()" class="add_new_book" id="add_new_book">Add a book</button>
     </main>
 
     <div class="add_book_container" id="add_book_container">
