added add new book button functionality

--- a/root/index.html
+++ b/root/index.html
@@ -19,8 +19,8 @@
     <button onclick="addNewBook()" class="add_new_book" id="add_new_book">Add a book</button>
     </main>
 
-    <div class="add_book_container" id="add_book_container">
-    <form>
+    <div class="add_book_form_container" id="add_book_form_container" style="display:none">
+    <form class="add_book_form" id="add_book_form">
         <input
         class="input"
         type="text"
