created Book constructor

--- a/root/index.html
+++ b/root/index.html
@@ -53,7 +53,7 @@
             <label for="rec_no">No</label><br>
         </div>
         <a href="/root/index.html" class="cnl_btn" id="cnl_btn">Cancel</a>
-        <button class="submit_btn" type="submit">Submit</button>
+        <button class="submit_btn" id="submit_btn" type="submit">Submit</button>
     </form>
 </div>
 
