styled book card

--- a/root/index.html
+++ b/root/index.html
@@ -26,6 +26,7 @@
         type="text"
         id="author"
         placeholder="Author"
+        name="book_author"
         required
         maxlength="75"
         /> <br> 
@@ -34,6 +35,7 @@
             type="text"
             id="title"
             placeholder="Book Title"
+            name="book_title"
             required
             maxlength="75"
             /> <br>   
@@ -42,6 +44,7 @@
             type="text"
             id="page_count"
             placeholder="Page Count"
+            name="page_count"
             required
             max="100000"
             />
