restructured files and folders

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="icon" type="image" href="../assets/images/favicon.ico.png">
-    <link rel="stylesheet" href="../assets/styles/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Personal Library</title>
 </head>
 <header class="header">
@@ -67,6 +67,6 @@
     <footer class="footer">
         &copy; 2022: Handcrafted by <a href=https://www.github.com/t-michael>t-michael</a> &#128125
     </footer>
-    <script src="../assets/js/index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
