fixed cancel button on book submission form

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <input type="checkbox" id="rec_no" name="rec_no" value="No">
             <label for="rec_no">No</label><br>
         </div>
-        <a href="/root/index.html" class="cnl_btn" id="cnl_btn">Cancel</a>
+        <a href="https://t-michael.github.io/personal_library/" class="cnl_btn" id="cnl_btn">Cancel</a>
         <button class="submit_btn" id="submit_btn" type="submit" value="Submit">Submit</button>
     </form>
 </div>
