updated styles, fixed submit button issue

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <label for="rec_no">No</label><br>
         </div>
         <a href="https://t-michael.github.io/personal_library/" class="cnl_btn" id="cnl_btn">Cancel</a>
-        <button class="submit_btn" id="submit_btn" type="submit" value="Submit">Submit</button>
+        <button class="submit_btn" id="submit_btn" type="submit" onclick="addBookToLibrary()">Submit</button>
     </form>
 </div>
 
