fixed book form displaying on-load

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <button class="add_new_book" id="add_new_book">Add a book</button>
     </section>
 
-    <div class="add_book_form_container" id="add_book_form_container">
+    <div class="add_book_form_container" id="add_book_form_container" style="display:none">
     <form class="add_book_form" id="add_book_form">
         <input
         class="input"
